--- a/eddl/Dockerfile
+++ b/eddl/Dockerfile
@@ -1,6 +1,6 @@
-FROM dhealth/pylibs-toolkit:0.12.2-cudnn
+FROM dhealth/pylibs-toolkit:1.0.0-cudnn
 RUN apt-get update
 RUN apt-get install unzip
-RUN pip install gdown pandas wandb
+RUN pip install gdown pandas wandb zipfile38
 COPY src deephealth-uc4-pyecvl/
 
