--- a/eddl/pod-deephealth-uc4-test-1gpu.yaml
+++ b/eddl/pod-deephealth-uc4-test-1gpu.yaml
@@ -8,7 +8,7 @@ spec:
  - name: deephealth-uc4
    image: riccardorenzulli/deephealth-uc4:cudnn
    command: ["bash", "-c"]
-   args: ["cd deephealth-uc4-pyecvl/; python3 test_model.py --dataset ../data/unitochest_eddl/dataset_molinette.yml --ckpts dh-uc4_epoch_150_miou_0.546678588931127.bin --wb_run_path eidoslab/deephealth-uc4/2s0msy84 --batch-size 4 --gpu 1 --num_workers 1 --queue_ratio_size 1"]
+   args: ["cd deephealth-uc4-pyecvl/; python3 test_model.py --dataset /data/unitochest_eddl_fulltest/dataset_molinette.yml --ckpts dh-uc4_epoch_150_miou_0.546678588931127.bin --wb_run_path eidoslab/deephealth-uc4/2s0msy84 --batch-size 3 --gpu 1 --num_workers 1 --queue_ratio_size 1"]
    volumeMounts:
           - name: download
             mountPath: /data
