--- a/eddl/pod-sleep.yaml
+++ b/eddl/pod-sleep.yaml
@@ -26,4 +26,5 @@ spec:
  volumes:
       - name: download
         persistentVolumeClaim:
-          claimName: deephealth-uc4
+          claimName: deephealth-uc4-shared
+
