--- a/eddl/pod-deephealth-uc4-test-4gpu.yaml
+++ b/eddl/pod-deephealth-uc4-test-4gpu.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Pod
 metadata:
- name: deephealth-uc4-test
+ name: deephealth-uc4-test-4gpu
 spec:
  restartPolicy: Never
  containers:
  - name: deephealth-uc4
    image: riccardorenzulli/deephealth-uc4:cudnn
    command: ["bash", "-c"]
-   args: ["cd deephealth-uc4-pyecvl/; python3 test_model.py --dataset ../data/unitochest_eddl/dataset_molinette.yml --ckpts dh-uc4_epoch_100_miou_0.5973054572237886.bin --wb_run_path eidoslab/deephealth-uc4/2yfc1tym --batch-size 16 --gpu 1 1 1 1 --num_workers 4 --queue_ratio_size 16"]
+   args: ["cd UC4_pipeline/eddl/src; python3 test_model.py --dataset /data/deephealth/deephealth-uc4/data/eddl/processed/unitochest_98/dataset_molinette.yml --ckpts dh-uc4_epoch_2_miou_0.5861243425093038.bin --wb_run_path eidoslab/deephealth-uc4/2iwcvn0o --batch_size 12 --gpu 1 1 1 1 --num_workers 4 --queue_ratio_size 16 --runs_dir /data/deephealth/deephealth-uc4/data/eddl/outputs/unitochest_98/test"]
    volumeMounts:
           - name: download
             mountPath: /data
