--- a/eddl/pod-deephealth-uc4-training-4gpu.yaml
+++ b/eddl/pod-deephealth-uc4-training-4gpu.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Pod
 metadata:
- name: deephealth-uc4-training-4gpu
+ name: deephealth-uc4-training-4gpu-shared
 spec:
  restartPolicy: Never
  containers:
  - name: deephealth-uc4
    image: riccardorenzulli/deephealth-uc4:cudnn
    command: ["bash", "-c"]
-   args: ["cd UC4_pipeline/eddl/src; python3 train_model.py --dataset /data/deephealth/deephealth-uc4/data/processed/unitochest/dataset_molinette.yml --epochs 100 --batch_size 12 --gpu 1 1 1 1 --num_workers 4 --queue_ratio_size 16 --resume_ckpts dh-uc4_epoch_150_miou_0.546678588931127.bin --wb_run_path eidoslab/deephealth-uc4/2s0msy84"]
+   args: ["cd UC4_pipeline/eddl/src; python3 train_model.py --dataset /data/deephealth/deephealth-uc4/data/eddl/processed/unitochest_noblackmasks/dataset_molinette.yml --epochs 100 --batch_size 12 --gpu 1 1 1 1 --num_workers 4 --queue_ratio_size 16"]
    volumeMounts:
           - name: download
             mountPath: /data
@@ -31,4 +31,4 @@ spec:
  volumes:
       - name: download
         persistentVolumeClaim:
-          claimName: deephealth-uc4
+          claimName: deephealth-uc4-shared
