Fixed save model on w&b

--- a/eddl/pod-deephealth-uc4-test-4gpu.yaml
+++ b/eddl/pod-deephealth-uc4-test-4gpu.yaml
@@ -31,4 +31,4 @@ spec:
  volumes:
       - name: download
         persistentVolumeClaim:
-          claimName: deephealth-uc4
+          claimName: unitochest
