--- a/eddl/pod-deephealth-uc4-processed.yaml
+++ b/eddl/pod-deephealth-uc4-processed.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Pod
 metadata:
- name: deephealth-uc4-processed
+ name: deephealth-uc4-eddl-processed
 spec:
  restartPolicy: Never
  containers:
  - name: deephealth-uc4
-   image: riccardorenzulli/deephealth-uc4:cudnn
+   image: riccardorenzulli/deephealth-uc4:eddl-dataset
    command: ["bash", "-c"]
-   args: ["cd UC4_pipeline/eddl/src; python3 processed_data.py --input_path /data/deephealth/deephealth-uc4/data/eddl/interim/unitochest --output_path /data/deephealth/deephealth-uc4/data/eddl/processed/unitochest_98"]
+   args: ["cd UC4_pipeline/eddl/src; python3 processed_data.py --input_path /data/deephealth/deephealth-uc4/data/interim/unitochest --output_path /data/deephealth/deephealth-uc4/data/eddl/processed/unitochest_noblackmasks"]
    volumeMounts:
           - name: download
             mountPath: /data
@@ -31,4 +31,4 @@ spec:
  volumes:
       - name: download
         persistentVolumeClaim:
-          claimName: deephealth-uc4
+          claimName: unitochest
