--- a/eddl/pod-deephealth-uc4-test-2gpu.yaml
+++ b/eddl/pod-deephealth-uc4-test-2gpu.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Pod
 metadata:
- name: deephealth-uc4-interim
+ name: deephealth-uc4-test-2gpu
 spec:
  restartPolicy: Never
  containers:
  - name: deephealth-uc4
    image: riccardorenzulli/deephealth-uc4:cudnn
    command: ["bash", "-c"]
-   args: ["cd UC4_pipeline/eddl/src; python3 interim_data_splitpatient.py --input_path /data/deephealth/deephealth-uc4/data/raw/unitochest --output_path /data/deephealth/deephealth-uc4/data/eddl/interim/unitochest"]
+   args: ["cd UC4_pipeline/eddl/src; python3 test_model.py --dataset /data/deephealth/deephealth-uc4/data/eddl/processed/unitochest_98/dataset_molinette.yml --ckpts dh-uc4_epoch_2_miou_0.5861243425093038.bin --wb_run_path eidoslab/deephealth-uc4/2iwcvn0o --batch_size 6 --gpu 1 1 --num_workers 2 --queue_ratio_size 8"]
    volumeMounts:
           - name: download
             mountPath: /data
@@ -25,10 +25,10 @@ spec:
           key: key
    resources:
      limits:
-       nvidia.com/gpu: 1
+       nvidia.com/gpu: 2
      requests:
-       nvidia.com/gpu: 1
+       nvidia.com/gpu: 2
  volumes:
       - name: download
         persistentVolumeClaim:
-          claimName: deephealth-uc4
+          claimName: unitochest
