--- a/eddl/pod-deephealth-uc4-training-4gpu_pretrained.yaml
+++ b/eddl/pod-deephealth-uc4-training-4gpu_pretrained.yaml
@@ -31,4 +31,4 @@ spec:
  volumes:
       - name: download
         persistentVolumeClaim:
-          claimName: deephealth-uc4
+          claimName: unitochest
