--- a/eddl/pod-sleep-unitochest.yaml
+++ b/eddl/pod-sleep-unitochest.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Pod
 metadata:
- name: deephealth-uc4-download-pod
+ name: sleep-unitochest
 spec:
  restartPolicy: Never
  containers:
- - name: deephealth-uc4
+ - name: sleep
    image: riccardorenzulli/deephealth-uc4:cudnn
-   command: ["bash", "-c"]
-   args: ["cd deephealth-uc4-pyecvl/; python3 download_dataset.py"]
+   command: ["/bin/bash", "-c", "--"]
+   args: ["while true; do sleep 30; done;"]
    volumeMounts:
           - name: download
             mountPath: /data
@@ -23,12 +23,8 @@ spec:
         secretKeyRef:
           name: perlo-wandb-auth
           key: key
-   resources:
-     limits:
-       nvidia.com/gpu: 1
-     requests:
-       nvidia.com/gpu: 1
  volumes:
       - name: download
         persistentVolumeClaim:
-          claimName: deephealth-uc4
+          claimName: unitochest
+
