--- a/eddl/volume-unitochest.yaml
+++ b/eddl/volume-unitochest.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-    name: deephealth-uc4-shared
+    name: unitochest
 spec:
     storageClassName: cdk-manila
     accessModes:
         - ReadWriteMany
     resources:
         requests:
-          storage: 350Gi
+          storage: 500Gi
