--- a/pytorch/config_noblackmasks.json
+++ b/pytorch/config_noblackmasks.json
@@ -1,9 +1,10 @@
 {
     "name": "UNet2D/nopretrained_blackmasks",
-    "n_gpu": 8,
+    "n_gpu": 4,
     "use_synch_bn": false,
     "num_classes": 1,
     "in_channels": 1,
+    "task": "segmentation",
     "accumulation_steps": 1,
     "mixed_precision": true,
     "seed": 42,
@@ -20,10 +21,11 @@
     "train_loader": {
         "type": "MolinetteLungsLoader",
         "args":{
-            "data_dir": "/data/deephealth-uc4/data/processed/unitochest/train",
+            "data_dir": "/data/deephealth/deephealth-uc4/data/pytorch/processed/unitochest/training",
             "mean" : [0.3266],
             "std" : [0.3551],
-            "batch_size": 256,
+            "black_masks": 0,
+            "batch_size": 32,
             "augment": true,
             "base_size": 512,
             "crop_size": false,
@@ -32,18 +34,19 @@
             "flip": true,
             "rotate": true,
             "blur": false,
-            "split": "train",
-            "num_workers": 32
+            "split": "training",
+            "num_workers": 16
         }
     },
 
     "val_loader": {
         "type": "MolinetteLungsLoader",
         "args":{
-            "data_dir": "/data/deephealth-uc4/data/processed/unitochest/val",
+            "data_dir": "/data/deephealth/deephealth-uc4/data/pytorch/processed/unitochest/validation",
             "mean" : [0.3266],
             "std" : [0.3551],
-            "batch_size": 256,
+            "black_masks": 0,
+            "batch_size": 32,
             "augment": true,
             "base_size": 512,
             "crop_size": false,
@@ -52,18 +55,19 @@
             "flip": false,
             "rotate": false,
             "blur": false,
-            "split": "val",
-            "num_workers": 32
+            "split": "validation",
+            "num_workers": 16
         }
     },
 
     "test_loader": {
         "type": "MolinetteLungsLoader",
         "args":{
-            "data_dir": "/data/deephealth-uc4/data/processed/unitochest/test",
+            "data_dir": "/data/deephealth/deephealth-uc4/data/pytorch/processed/unitochest/test",
             "mean" : [0.3266],
             "std" : [0.3551],
-            "batch_size": 256,
+            "batch_size": 32,
+            "black_masks": 0,
             "augment": true,
             "base_size": 512,
             "crop_size": false,
@@ -73,7 +77,7 @@
             "rotate": true,
             "blur": false,
             "split": "test",
-            "num_workers": 32
+            "num_workers": 16
         }
     },
 
@@ -81,7 +85,7 @@
         "type": "Adam",
         "differential_lr": false,
         "args":{
-            "lr": 0.001,
+            "lr": 0.0001,
             "weight_decay": 1e-4
         }
     },
@@ -94,11 +98,11 @@
     "ignore_index": 255,
 
     "trainer": {
-        "epochs": 500,
+        "epochs": 200,
         "save_dir": "saved/",
         "save_period": 50,
   
-        "monitor": "max Mean_IoU",
+        "monitor": "max iou",
         "early_stop": 50,
         
         "tensorboard": true,
