--- a/pytorch/pod-pytorch-deephealth-uc4-processed.yaml
+++ b/pytorch/pod-pytorch-deephealth-uc4-processed.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Pod
 metadata:
- name: deephealth-uc4-test-1gpu
+ name: deephealth-uc4-pytorch-processed
 spec:
  restartPolicy: Never
  containers:
  - name: deephealth-uc4
-   image: riccardorenzulli/deephealth-uc4:cudnn
+   image: riccardorenzulli/deephealth-uc4:pytorch
    command: ["bash", "-c"]
-   args: ["cd UC4_pipeline/eddl/src; python3 test_model.py --dataset /data/deephealth/deephealth-uc4/data/eddl/processed/unitochest_98/dataset_molinette.yml --ckpts dh-uc4_epoch_2_miou_0.5861243425093038.bin --wb_run_path eidoslab/deephealth-uc4/2iwcvn0o --batch_size 1 --gpu 1 --num_workers 1 --queue_ratio_size 4 --runs_dir /data/deephealth/deephealth-uc4/data/eddl/outputs/unitochest_98/test"]
+   args: ["cd UC4_pipeline/pytorch/; python3 processed_data.py --input_path /data/deephealth/deephealth-uc4/data/interim/unitochest --output_path /data/deephealth/deephealth-uc4/data/pytorch/processed/unitochest"]
    volumeMounts:
           - name: download
             mountPath: /data
