--- a/pytorch/pod-pytorch-deephealth-uc4-training-4gpu-noblackmasks.yaml
+++ b/pytorch/pod-pytorch-deephealth-uc4-training-4gpu-noblackmasks.yaml
@@ -1,17 +1,19 @@
 apiVersion: v1
 kind: Pod
 metadata:
- name: deephealth-uc4-test-1gpu
+ name: deephealth-uc4-pytorch-training-4gpu-noblackmasks
 spec:
  restartPolicy: Never
  containers:
  - name: deephealth-uc4
-   image: riccardorenzulli/deephealth-uc4:cudnn
+   image: riccardorenzulli/deephealth-uc4:pytorch
    command: ["bash", "-c"]
-   args: ["cd UC4_pipeline/eddl/src; python3 test_model.py --dataset /data/deephealth/deephealth-uc4/data/eddl/processed/unitochest_98/dataset_molinette.yml --ckpts dh-uc4_epoch_2_miou_0.5861243425093038.bin --wb_run_path eidoslab/deephealth-uc4/2iwcvn0o --batch_size 1 --gpu 1 --num_workers 1 --queue_ratio_size 4 --runs_dir /data/deephealth/deephealth-uc4/data/eddl/outputs/unitochest_98/test"]
+   args: ["cd UC4_pipeline/pytorch/; python3 train.py --config config_noblackmasks.json"]
    volumeMounts:
           - name: download
             mountPath: /data
+          - name: shm
+            mountPath: /dev/shm
    env:
     - name: WANDB_BASE_URL
       valueFrom:
@@ -23,12 +25,17 @@ spec:
         secretKeyRef:
           name: perlo-wandb-auth
           key: key
+    - name: PYTHONUNBUFFERED
+      value: "1"
    resources:
      limits:
-       nvidia.com/gpu: 1
+       nvidia.com/gpu: 4
      requests:
-       nvidia.com/gpu: 1
+       nvidia.com/gpu: 4
  volumes:
       - name: download
         persistentVolumeClaim:
           claimName: unitochest
+      - name: shm
+        emptyDir:
+          medium: Memory
