--- a/eddl/pod-deephealth-uc4-training-4gpu.yaml
+++ b/eddl/pod-deephealth-uc4-training-4gpu.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Pod
 metadata:
- name: deephealth-uc4-training-4gpu-shared
+ name: deephealth-uc4-training-4gpu
 spec:
  restartPolicy: Never
  containers:
  - name: deephealth-uc4
-   image: riccardorenzulli/deephealth-uc4:cudnn
+   image: riccardorenzulli/deephealth-uc4:pyecvl-pyeddl
    command: ["bash", "-c"]
    args: ["cd UC4_pipeline/eddl/src; python3 train_model.py --dataset /data/deephealth/deephealth-uc4/data/eddl/processed/unitochest_noblackmasks/dataset_molinette.yml --epochs 10 --batch_size 12 --gpu 1 1 1 1 --num_workers 16 --queue_ratio_size 1"]
    volumeMounts:
