--- a/eddl/pod-deephealth-uc4-training-4gpu_pretrained.yaml
+++ b/eddl/pod-deephealth-uc4-training-4gpu_pretrained.yaml
@@ -6,7 +6,7 @@ spec:
  restartPolicy: Never
  containers:
  - name: deephealth-uc4
-   image: riccardorenzulli/deephealth-uc4:cudnn
+   image: riccardorenzulli/deephealth-uc4:pyecvl-pyeddl
    command: ["bash", "-c"]
    args: ["cd UC4_pipeline/eddl/src; python3 train_model.py --dataset /data/deephealth/deephealth-uc4/data/eddl/processed/unitochest_98/dataset_molinette.yml --epochs 100 --batch_size 12 --gpu 1 1 1 1 --num_workers 4 --queue_ratio_size 16 --resume_ckpts dh-uc4_epoch_150_miou_0.546678588931127.bin --wb_run_path eidoslab/deephealth-uc4/2s0msy84"]
    volumeMounts:
