--- a/Dockerfile_pytorch
+++ b/Dockerfile_pytorch
@@ -1,6 +1,13 @@
 FROM pytorch/pytorch:1.11.0-cuda11.3-cudnn8-runtime
-RUN apt-get update
-RUN apt-get install openssh-server unzip ffmpeg libsm6 libxext6 texlive-full -y
+ARG DEBIAN_FRONTEND=noninteractive
+RUN apt-get update 
+RUN apt-get install locales openssh-server unzip ffmpeg libsm6 libxext6 texlive-full -y
+# Set the locale
+RUN sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && \
+    locale-gen
+ENV LANG en_US.UTF-8  
+ENV LANGUAGE en_US:en  
+ENV LC_ALL en_US.UTF-8  
 RUN pip install pandas wandb zipfile38 numpy scipy opencv-python tqdm scikit-learn pydicom pypng pillow matplotlib seaborn scikit-image MedPy tensorboard
 RUN mkdir UC4_pipeline
 COPY . UC4_pipeline/
