--- a/eddl/pod-deephealth-uc4-training-4gpu_sweep.yaml
+++ b/eddl/pod-deephealth-uc4-training-4gpu_sweep.yaml
@@ -6,7 +6,7 @@ spec:
  restartPolicy: Never
  containers:
  - name: deephealth-uc4
-   image: riccardorenzulli/deephealth-uc4:cudnn
+   image: riccardorenzulli/deephealth-uc4:pyecvl-pyeddl
    command: ["bash", "-c"]
    args: ["cd UC4_pipeline/eddl/src; python3 train_model_sweep.py --dataset /data/deephealth/deephealth-uc4/data/eddl/processed/unitochest_noblackmasks/dataset_molinette.yml --epochs 1 --batch_size 12 --gpu 1 1 1 1"]
    volumeMounts:
